--- a/src/components/CreateArea/create.module.css
+++ b/src/components/CreateArea/create.module.css
@@ -10,20 +10,33 @@
     width: 80%;
     padding: 10px;
     font-size: 1.2em;
-    border: 1px solid #1b531d;
-    border-radius: 4px;
     background-color: #61ca64;
     color: #0a440c;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+    border: none;
+    border-radius: 4px;
+    resize: none;
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 5px #4fb722;
+    }
     
   }
 
   >button {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #61ca64;
+    color: antiquewhite;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 200px;
+    margin-top: 25px;
+    &:hover {
+      background-color: #32a736;
+    }
   }
 }
