--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,6 +1,6 @@
 .header h1 {
     background-color: #4CAF50;
-    color: white;
+    color: antiquewhite;
     padding: 16px 32px;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
