--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 * {
-    padding: 0;
-    margin: 0;  
-    box-sizing: border-box;
- }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
-  grid-template-columns:1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 20px;
+  padding: 20px;
 }
